--- a/app/src/main/res/layout/activity_begin.xml
+++ b/app/src/main/res/layout/activity_begin.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.MainActivity"
-    android:background="@drawable/garageden">
-
+    tools:context=".BeginActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
