service fragment added

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -249,6 +249,7 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:passwordToggleEnabled="true"
                     app:startIconDrawable="@drawable/baseline_lock">
 
                     <com.google.android.material.textfield.TextInputEditText
