--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="20dp"
+    app:cardUseCompatPadding="true"
     tools:context=".botmnavfragments.ServicesFragment">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/search_serv"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:src="@drawable/baseline_search"
+        android:layout_gravity="end"
+        android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/services_rv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is help support"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="10dp"
+        tools:listitem="@layout/service_layout"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
