--- a/app/src/main/res/layout/fragment_fillers.xml
+++ b/app/src/main/res/layout/fragment_fillers.xml
@@ -1,39 +1,260 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="10dp"
     tools:context=".botmnavfragments.FiltersFragment">
 
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/search_CardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        android:layout_marginHorizontal="150dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/search_rv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
+    <LinearLayout
+        android:id="@+id/filtered"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/short_filtered_by"
+            android:textStyle="bold"/>
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:iconifiedByDefault="false"
-            app:queryBackground="@android:color/transparent"/>
-    </com.google.android.material.card.MaterialCardView>
+            android:text="@string/reset"
+            android:textAlignment="textEnd"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_rv"
-        android:layout_width="match_parent"
-        android:layout_height="661dp"
-        app:layout_constraintTop_toBottomOf="@id/search_CardView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+  <TextView
+      android:id="@+id/make_txt"
+      android:layout_width="150dp"
+      android:layout_height="wrap_content"
+      android:textStyle="bold"
+      android:text="MAKE"
+      android:layout_marginTop="30dp"
+      app:layout_constraintTop_toBottomOf="@id/filtered"
+      app:layout_constraintStart_toStartOf="parent"/>
 
-</FrameLayout>
+    <LinearLayout
+        android:id="@+id/suzuki_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/make_txt"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Muruchi Suzuki"/>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rolly Royce"
+            android:layout_marginStart="50dp"/>
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/audi_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/suzuki_layout"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Audi"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BMW"
+                android:layout_marginStart="120dp"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/fuel_type"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="Fuel Type"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/audi_layout"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <LinearLayout
+            android:id="@+id/petrol_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/fuel_type"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Petrol"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Diesel"
+                android:layout_marginStart="110dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/gas_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/petrol_layout"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gas"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="123dp"
+                android:text="Electrical" />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/transmission_type"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="Transmission Type"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/gas_layout"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <LinearLayout
+            android:id="@+id/automatic_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/transmission_type"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Automatic"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semi-automatic"
+                android:layout_marginStart="90dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/manual_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/automatic_layout"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Manual"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="110dp"
+                android:text="Other" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/body_type"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="Body Type"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/manual_layout"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <LinearLayout
+            android:id="@+id/sedan_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/body_type"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sedan"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hatchback"
+                android:layout_marginStart="120dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/coupe_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/sedan_layout"
+            app:layout_constraintStart_toStartOf="parent">
+
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Coupe"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="120dp"
+                android:text="SUV/MUV" />
+
+        </LinearLayout>
+
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="144dp"
+            android:layout_marginTop="10dp"
+            android:text="Save"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/coupe_layout" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
