added some feaures

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,13 +17,16 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:elevation="4dp"
-            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:background="@color/lightblue"
+            app:layout_constraintBottom_toTopOf="@id/fragment_container"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"/>
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -33,22 +36,22 @@
                 android:id="@+id/bottomAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
                 app:contentInsetStart="0dp"
                 app:fabAlignmentMode="center"
                 app:fabCradleMargin="10dp"
-                app:fabCradleRoundedCornerRadius="20dp" />
+                app:fabCradleRoundedCornerRadius="20dp"/>
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:elevation="0dp"
+                android:layout_gravity="bottom"
                 app:labelVisibilityMode="labeled"
                 app:itemIconTint="@color/black"
                 app:itemRippleColor="@color/black"
                 app:itemTextColor="@color/black"
+                android:background="@color/lightblue"
                 app:menu="@menu/bottom_menu" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
