--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -134,17 +134,19 @@
 
         </LinearLayout>
 
+
         <Button
-            android:id="@+id/btn_save"
-            android:layout_width="match_parent"
+            android:id="@+id/save_btn"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="SAVE"
-            android:layout_marginHorizontal="20dp"
-            app:layout_constraintTop_toBottomOf="@id/details_layout"
+            android:textStyle="bold"
+            android:backgroundTint="@color/blue"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"/>
-
-
+            app:layout_constraintTop_toBottomOf="@id/details_layout"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
