--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#2196F3</color>
     <color name="red">#F32140</color>
     <color name="green">#4CAF50</color>
+    <color name="lightblue">#2196F3</color>
 </resources>
