--- a/app/src/main/res/layout/browse_layout.xml
+++ b/app/src/main/res/layout/browse_layout.xml
@@ -12,18 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/star_img"
             android:layout_width="100dp"
             android:layout_height="80dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/baseline_star_24"
-            android:layout_marginTop="-7dp"
-            android:layout_marginStart="140dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Brand"
-                android:textSize="30sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -46,12 +46,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
-
         <TextView
+            android:id="@+id/desc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Sell all car brand by"
-            android:textSize="25sp"
+            android:textSize="10sp"
             android:textStyle="italic"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
