--- a/app/src/main/res/layout/service_layout.xml
+++ b/app/src/main/res/layout/service_layout.xml
@@ -36,6 +36,7 @@
                     android:layout_gravity="center"/>
 
                   <TextView
+                      android:id="@+id/car_diag"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Car Diagostic"
