--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_profileFragment_to_servicesFragment2"
             app:destination="@id/servicesFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/servicesFragment"
@@ -36,5 +39,9 @@
         android:id="@+id/filltersFragment"
         android:name="com.example.garageden.botmnavfragments.FiltersFragment"
         android:label="fragment_fillers"
-        tools:layout="@layout/fragment_fillers" />
+        tools:layout="@layout/fragment_fillers" >
+        <action
+            android:id="@+id/action_filltersFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
