--- a/app/src/main/res/layout/browse_layout.xml
+++ b/app/src/main/res/layout/browse_layout.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="150dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="12dp"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginTop="10dp"
+    app:cardElevation="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginTop="5dp"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/star_img"
             android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="80dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/baseline_star_24"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,28 +39,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Brand"
+                android:textAlignment="center"
                 android:textSize="15sp"
                 android:textStyle="bold"
-               android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.145"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/desc"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Sell all car brand by"
-            android:textSize="10sp"
-            android:textStyle="italic"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/brand_txt"/>
+            <TextView
+                android:id="@+id/desc"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Sell all car brand by"
+                android:textAlignment="center"
+                android:textSize="10sp"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/brand_txt"
+                app:layout_constraintVertical_bias="0.0" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
