--- a/app/src/main/res/layout/fragment_fillers.xml
+++ b/app/src/main/res/layout/fragment_fillers.xml
@@ -251,6 +251,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="144dp"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@color/blue"
             android:text="Save"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
