--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".drawerfragments.SettingsFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/settings_layout"
@@ -34,15 +39,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Ancy Nyabuti"
+                android:textSize="15sp"
                 android:layout_gravity="center"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/set_location"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Nairobi"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:text="Nairobi"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -77,6 +83,7 @@
             android:layout_height="wrap_content"
             android:text="Dark Mode"
             android:layout_gravity="center"
+            android:textSize="18sp"
             android:layout_marginStart="40dp"/>
 
         <com.google.android.material.materialswitch.MaterialSwitch
@@ -128,6 +135,7 @@
             android:layout_height="wrap_content"
             android:text="Change Password"
             android:layout_gravity="center"
+            android:textSize="10sp"
             android:layout_marginStart="40dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -159,7 +167,8 @@
                 android:layout_height="wrap_content"
                 android:text="Clear Mode History"
                 android:layout_gravity="center"
-                android:layout_marginStart="40dp"/>
+                android:layout_marginStart="40dp"
+                android:textSize="10sp"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="50dp"
@@ -206,6 +215,7 @@
             android:layout_height="wrap_content"
             android:text="Language"
             android:layout_gravity="center"
+            android:textSize="18sp"
             android:layout_marginStart="40dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -218,7 +228,50 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/rate_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rate"
+        app:layout_constraintTop_toBottomOf="@id/regional_layout"
+        android:layout_marginTop="20dp"
+        android:layout_marginVertical="30dp"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
 
+    <LinearLayout
+        android:id="@+id/rate_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginVertical="25dp"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/rate_txt"
+        android:orientation="horizontal">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="70dp"
+            android:layout_height="50dp"
+            android:src="@drawable/baseline_star_rate"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="40dp"
+            android:text="Rate Us" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="end"
+            android:src="@drawable/baseline_arrow_forward"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="18sp"
+            android:layout_marginStart="130dp"/>
+
+    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
